# service_practice1

./: README.md  deployment.yml  service.yml
.github/workflows/: cd.yml
service1/: Dockerfile  pyproject.toml
service1/src/: logger.py  main.py  middleware.py
service1/tests/: test_api_server.py
service1/tests/test_walking_skeleton/: test_api_server.py
